--- a/README.me
+++ b/README.me
@@ -4,6 +4,6 @@
 - 💞️ I’m looking to collaborate on techies
 
 <!---
-kmrvikky/kmrvikky is a ✨ special ✨ repository because its `README.md` (this file) appears on your GitHub profile.
+kmrvikky/Vikky is a ✨ special ✨ repository because its `README.md` (this file) appears on your GitHub profile.
 You can click the Preview link to take a look at your changes.
 --->
